Updated content for the LDC appeal

--- a/app/views/appeal/ldc/v3/prepare-appeal/contact-details.html
+++ b/app/views/appeal/ldc/v3/prepare-appeal/contact-details.html
@@ -41,7 +41,7 @@
       name: 'agency-name',
       value: data['agency-name'],
       label: {
-        html: 'Consultancy name (optional)'
+        html: 'Company name (optional)'
       }
     }) }}
 
