IP meta data fix on appeal detail

--- a/app/views/_includes/appeal-content/full-appeal-details.html
+++ b/app/views/_includes/appeal-content/full-appeal-details.html
@@ -58,7 +58,7 @@
 
 </dl>
 
-<h2 class="govuk-heading-m">
+<!-- <h2 class="govuk-heading-m">
   Planning application
 </h2>
 
@@ -123,4 +123,4 @@
     </dd>
   </div>
 
-</dl>
+</dl> -->
