--- a/app/views/_includes/appeal-content/full-application-data.html
+++ b/app/views/_includes/appeal-content/full-application-data.html
@@ -1,4 +1,4 @@
-<dl class="govuk-summary-list">
+<dl class="govuk-summary-list govuk-!-margin-bottom-6">
   <h2 class="govuk-heading-m">
     Application
   </h2>
@@ -51,7 +51,7 @@
       </a>
     </dd>
   </div>
-  <div class="govuk-summary-list__row pinswwwwww-summary-list__row--last">
+  <div class="govuk-summary-list__row pins-summary-list__row--last">
     <dt class="govuk-summary-list__key">
       Design and access statement
     </dt>
