Content update consultancy to company

--- a/app/views/appeal/full/index.html
+++ b/app/views/appeal/full/index.html
@@ -34,6 +34,9 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        changed 'consultancy name' to 'company name'
+      </li>
+      <li>
         adding guidance about costs on the <a href="v3/upload-documents/appeal-statement?action=" class="govuk-link">upload statement page</a>
       </li>
     </ul>
