--- a/app/views/appeal/has/index.html
+++ b/app/views/appeal/has/index.html
@@ -30,7 +30,24 @@
       }) }}
     </h2>
 
-    <p class="govuk-body">Improvements to the process that was developed and released. Brings householder in line with design changes made in the time since release.</p>
+    <p class="govuk-!-margin-bottom-2">Changes:</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        changed 'consultancy name' to 'company name'
+      </li>
+      <li>
+        adding guidance about costs on the <a href="v3/upload-documents/appeal-statement?action=" class="govuk-link">upload statement page</a>
+      </li>
+      <li>
+        improvements to the process that was developed and released
+      </li>
+      <li>
+        brings householder in line with design changes made in the time since release
+      </li>
+    </ul>
+
+    <p class="govuk-body">
 
     {{ govukInsetText({
       html: '<p class="govuk-body"><a href="https://miro.com/app/board/uXjVPAIID7s=/?share_link_id=748467977892">Design Miro board</a> with notes from review of live and changes.</p>'
