--- a/app/views/appeal/full/v3/prepare-appeal/own-all.html
+++ b/app/views/appeal/full/v3/prepare-appeal/own-all.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Do you own all the land involved in the appeal?' %}
+{% set title = 'Do you own all of the land involved in the appeal?' %}
 
 {% block questions %}
   {{ govukRadios({
