All / some of the land typo

--- a/app/views/appeal/full/v3/prepare-appeal/own-some.html
+++ b/app/views/appeal/full/v3/prepare-appeal/own-some.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Do you own some the land involved in the appeal?' %}
+{% set title = 'Do you own some of the land involved in the appeal?' %}
 
 {% block questions %}
   {{ govukRadios({
