Moved over final comments from archive, index updated link to prototype archive

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -186,7 +186,7 @@
       The previous prototype is hosted in another place as it uses a differemt version of the prototype kit.
     </p>
     <p class="govuk-body">
-      <a href="https://appealz.up.railway.app/">View the archive</a> (username is tim, password is password)
+      <a href="https://appeals-prototype-archive.herokuapp.com/">View the archive</a>
     </p>
 
   </div>
