--- a/app/views/appeal/final-comments/v4/documents-upload.html
+++ b/app/views/appeal/final-comments/v4/documents-upload.html
@@ -1,4 +1,4 @@
-{% extends location+"_layout.html" %}
+{% extends '_layouts/layout-main.html' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
