--- a/app/views/index.html
+++ b/app/views/index.html
@@ -50,6 +50,9 @@
           <a href="/appeal/full/">Full planning</a>
         </li>
         <li>
+          <a href="/appeal/final-comments/">Final comments for full planning</a>
+        </li>
+        <li>
           Enforcement (needs review)
         </li>
         <li>
