--- a/app/views/appeal/final-comments/v4/final-comments.html
+++ b/app/views/appeal/final-comments/v4/final-comments.html
@@ -1,4 +1,4 @@
-{% extends location+"_layout.html" %}
+{% extends '_layouts/layout-main.html' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
