--- a/app/views/appeal/final-comments/v4/lpa-email.html
+++ b/app/views/appeal/final-comments/v4/lpa-email.html
@@ -1,4 +1,4 @@
-{% extends "layout-email.html" %}
+{% extends '_layouts/layout-main.html' %}
 
 {% block content %}
 <!-- faux email header -->
@@ -10,16 +10,16 @@
     <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
     <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
-  <p>
+  <!-- <p>
     <img src="{{ asset_path }}images/pi-logo.png" width="150" alt="Planning Inspectorate logo, Royal coat of arms of the United Kingdom in black and white. A lion wearing a crown and a unicorn dance either side of a crest with a crown on it."/>
-  </p>
+  </p> -->
   <hr>
 </section>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
-    <p>Appeal reference: ENF13579F
+    <p>Appeal reference: 0123456
     <br>
       Appeal site: 11 Bradling Avenue, Sampleford, BS17 2PP</p>
 
