Fixing back buttons, removing task list links

--- a/app/views/appeal/final-comments/v4/check-your-answers.html
+++ b/app/views/appeal/final-comments/v4/check-your-answers.html
@@ -1,5 +1,7 @@
 {% extends '_layouts/layout-main.html' %}
 
+{% set return = false %}
+
 {% block questions %}
   <h1 class="govuk-heading-l">
     Check your answers and submit your final comments
