--- a/app/views/appeal/final-comments/v4/final-comments.html
+++ b/app/views/appeal/final-comments/v4/final-comments.html
@@ -1,11 +1,7 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: { text: 'Beta' },
-    html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
-  }) }}
-{% endblock %}
+{% set return = false %}
+{% set back = true %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
