--- a/app/views/appeal/final-comments/v4/documents-check.html
+++ b/app/views/appeal/final-comments/v4/documents-check.html
@@ -1,5 +1,7 @@
 {% extends '_layouts/layout-main.html' %}
 
+{% set return = false %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'adding-documents',
