Content updates for final comment

--- a/app/views/appeal/final-comments/v4/check-your-answers.html
+++ b/app/views/appeal/final-comments/v4/check-your-answers.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Check your answers and submit your final comments
+    Check your answers and submit your final comment
   </h1>
 
   {{ govukSummaryList({
