--- a/app/views/appeal/final-comments/v4/confirmation.html
+++ b/app/views/appeal/final-comments/v4/confirmation.html
@@ -18,7 +18,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleHtml: 'Final comments submitted',
+        titleHtml: 'Final comment submitted',
         html: "Your reference number<br><strong>0123456</strong>"
       }) }}
 
