--- a/app/views/appeal/final-comments/v4/final-comment-check.html
+++ b/app/views/appeal/final-comments/v4/final-comment-check.html
@@ -10,7 +10,7 @@
     name: 'adding-comment',
     fieldset: {
       legend: {
-        html: 'Do you want to make a final comment?',
+        html: 'Do you want to submit a final comment?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
