--- a/app/views/appeal/final-comments/v4/final-comments.html
+++ b/app/views/appeal/final-comments/v4/final-comments.html
@@ -5,18 +5,18 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Add final comments
+    Add final comment
   </h1>
 
-  <p>Your final comments should only respond to the statements from the <span class="highlight">((local planning authority / appellant))</span> or interested parties, and must not include any new evidence.</p>
+  <p>Your final comment should only respond to the statements from the <span class="highlight">((local planning authority / appellant))</span> or interested parties, and must not include any new evidence.</p>
 
-  <p>If you want to add documents to support your comments, for example photographs, you can upload them in the next step.</p>
+  <p>If you want to add documents to support your comment, for example photographs, you can upload them in the next step.</p>
 
   <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
     Sensitive information
   </h2>
 
-  <p>You must not include any sensitive information in your comments. If you do, you&rsquo;ll be asked to resubmit, which will delay your appeal.</p>
+  <p>You must not include any sensitive information in your comment. If you do, you&rsquo;ll be asked to resubmit, which will delay your appeal.</p>
 
   {% set sensitiveHTML %}
     <p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
@@ -53,7 +53,7 @@
     value: data['final-comments'],
     rows: '8',
     label: {
-      html: 'What are your final comments?',
+      html: 'What is your final comment?',
       classes: 'govuk-label--m'
     }
   }) }}
@@ -64,8 +64,8 @@
     classes: 'checkboxes-long-text',
     items: [
       {
-        html: 'I confirm that I have not included any sensitive information in my final comments.',
-        value: 'I confirm that I have not included any sensitive information in my final comments.',
+        html: 'I confirm that I have not included any sensitive information in my final comment.',
+        value: 'I confirm that I have not included any sensitive information in my final comment.',
         checked: checked('appeal-statement-confirmation','I confirm that I have not included any sensitive information in my final comments.')
       }
     ]
