IP email headers

--- a/app/views/appeal/final-comments/v4/confirmation-email.html
+++ b/app/views/appeal/final-comments/v4/confirmation-email.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout-main.html' %}
+{% extends '_layouts/layout-email.html' %}
 
 {% block content %}
 <!-- faux email header -->
