IP email template update

--- a/app/views/appeal/final-comments/v4/lpa-email.html
+++ b/app/views/appeal/final-comments/v4/lpa-email.html
@@ -58,9 +58,11 @@
 
     <p>Once the deadline for final comments has passed, the Inspector will arrange a site visit. We&rsquo;ll contact you if you need to give them access.</p>
 
-    <p>Thank you,<br>
+    <p>
+      Thank you,<br>
       Mari Bidbod<br>
-      mari.bidbod@planninginspectorate.gov.uk</p>
+      mari.bidbod@planninginspectorate.gov.uk
+    </p>
 
   </div>
 </div>
