Final comment email content updates and default logic for the journey

--- a/app/views/appeal/final-comments/v4/check-your-answers.html
+++ b/app/views/appeal/final-comments/v4/check-your-answers.html
@@ -24,7 +24,7 @@
             }
           ]
         }
-      } if data['adding-comment'] == 'Yes',
+      } if data['adding-comment'] != 'No',
       {
         key: {
           text: 'Final comments'
@@ -56,7 +56,7 @@
             }
           ]
         }
-      } if data['adding-comment'] == 'Yes',
+      } if data['adding-comment'] != 'No',
       {
         key: {
           text: 'Supporting documents'
