--- a/app/views/appeal/final-comments/v4/confirmation-email.html
+++ b/app/views/appeal/final-comments/v4/confirmation-email.html
@@ -7,7 +7,7 @@
     <strong>Subject:</strong> We’ve received your final comments
   </p>
   <p>
-    <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
+    <strong>To:</strong> {{ data['email'] or 'my.emailaddress@hotmail.com'}}<br>
     <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
   <!-- <p>
@@ -17,13 +17,13 @@
 </section>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
 
     <p>Appeal reference: 0123456
     <br>
       Appeal site: 11 Bradling Avenue, Sampleford, BS17 2PP</p>
 
-    <p>Dear Sam Avo,</p>
+    <p>Dear (your name),</p>
 
     <p>
       We've received your final comments for appeal 0123456.
