--- a/app/views/appeal/final-comments/v4/final-comments.html
+++ b/app/views/appeal/final-comments/v4/final-comments.html
@@ -5,7 +5,7 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Add final comment
+    What is your final comment?
   </h1>
 
   <p>Your final comment should only respond to the statements from the <span class="highlight">((local planning authority / appellant))</span> or interested parties, and must not include any new evidence.</p>
@@ -53,7 +53,7 @@
     value: data['final-comments'],
     rows: '8',
     label: {
-      html: 'What is your final comment?',
+      html: 'Your comment',
       classes: 'govuk-label--m'
     }
   }) }}
