--- a/app/views/appeal/final-comments/v4/lpa-email.html
+++ b/app/views/appeal/final-comments/v4/lpa-email.html
@@ -6,10 +6,10 @@
 <!-- faux email header -->
 <section>
     <p>
-    <strong>Subject:</strong> Respond to these statements for your appeal
+    <strong>Subject:</strong> Respond to these interested party comments
   </p>
   <p>
-    <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
+    <strong>To:</strong> {{ data['email'] or 'my.emailaddress@hotmail.com'}}<br>
     <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
   <!-- <p>
@@ -19,49 +19,69 @@
 </section>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
 
     <p>Appeal reference: 0123456
     <br>
       Appeal site: 11 Bradling Avenue, Sampleford, BS17 2PP</p>
 
-    <p>Dear Sam Avo,</p>
+    <p>Dear (your name),</p>
 
-    <p>Sampleford City Council and other interested parties have submitted statements about your appeal.</p>
+    <p>
+      Interested parties have commented on the appeal about planning application 0123456. 
+    </p>
 
-    <p>We&rsquo;ve attached the statements for your information.</p>
-
+    <p>
+      We’ve attached the comments for your information.
+    </p>
 
     <h2 class="govuk-heading-m">
       What you can do
     </h2>
 
-    <p>You can respond to the statement in writing. This is called your &lsquo;final comments&rsquo;.</p>
+    <p>
+      You can respond to any issues raise by the interested parties by submitting final comments.
+    </p>
 
-    <p>Your comments must only respond to the issues in the statements. You do not need to repeat information from your appeal statement. You cannot introduce new evidence or arguments. Do not include any personal or sensitive information.</p>
+    <p>
+      You do not need to repeat information from your statement of case. You cannot introduce new evidence or arguments. 
+    </p>
 
-    {{ govukInsetText({
-      html: 'Final comments are optional. It is your decision whether you submit any.'
-    }) }}
+    <p>
+      Add your final comments, change or update your appeal statement.
+    </p>
 
-    <p>If you want to add final comments go to the link:<br><a href="input-code" class="govuk-link">http://www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29</a></p>
+    <p>
+      <a href="input-code" class="govuk-link">http://www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29</a>
+    </p>
 
-    <p>Your deadline is {{ 21 | daysInFuture }}. This is the last time you can comment on the appeal or add updated documents.</p>
+    <p>
+      Your deadline is {{ 21 | daysInFuture }}. This is the last time you can comment on the appeal or add updated documents.
+    </p>
+
+    <p>
+      Final comments are optional.
+    </p>
 
     <h2 class="govuk-heading-m">
       What happens next
     </h2>
 
-    <p>If you submit final comments, we&rsquo;ll forward them to Sampleford City Council</p>
+    <p>
+      If you submit final comments, we'll forward them to the appellant. 
+    </p>
 
-    <p>Sampleford City Council can also respond to interest parties&rsquo; statements. If it does, we&rsquo;ll forward you a copy for your information.</p>
+    <p>
+      If the appellant submits final comments, we’ll forward you a copy for your information.
+    </p>
 
-    <p>Once the deadline for final comments has passed, the Inspector will arrange a site visit. We&rsquo;ll contact you if you need to give them access.</p>
+    <p>
+      The Inspector will then consider the appeal and make a decision.
+    </p>
 
     <p>
       Thank you,<br>
-      Mari Bidbod<br>
-      mari.bidbod@planninginspectorate.gov.uk
+      Mari Bidbod
     </p>
 
   </div>
