--- a/app/views/appeal/final-comments/v4/input-code.html
+++ b/app/views/appeal/final-comments/v4/input-code.html
@@ -3,6 +3,23 @@
 {% set back = false %}
 
 {% block questions %}
+
+  {% set resentNotification %}
+    <mark role="alert" class="govuk-!-margin-bottom-0">
+      <h3 class="govuk-notification-banner__heading">
+        Email resent
+      </h3>
+      <p class="govuk-body">We&rsquo;ve resent a code to your email address, it might take a few minutes to arrive.</p>
+    </mark>
+  {% endset %}
+
+  {% if data['resent'] %}
+    {{ govukNotificationBanner({
+      html: resentNotification,
+      type: 'success'
+    }) }}
+  {% endif %}
+
   <h1 class="govuk-heading-l">
     Check your email
   </h1>
@@ -28,7 +45,25 @@
     href: 'final-comment-check'
   }) }}
 
-  <p><a href="?retry=1">Not received the code?</a></p>
+  {% if data['resent'] %}
+
+    {% set customerSupport %}
+      {% include "_includes/contact-cst.html" %}
+    {% endset -%}
+
+    {{ govukDetails({
+      summaryHtml: 'If you&rsquo;re still having problems',
+      html: customerSupport,
+      classes: 'govuk-!-margin-top-5'
+    }) }}
+
+  {% else %}
+
+    <p class="govuk-body">
+      Check if the email has gone to your spam or junk folder. {{ ' If it is not there, we can <a href="input-code?resent=1">resend the email</a>.' | safe if not resent }}
+    </p>
+
+  {% endif %}
 
 {% endblock %}
 
