--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
           <a href="appeal/save-and-return/">Save and return</a>
         </li>
         <li>
-          <a href="/appeal/service/">Planned maintenance</a>
+          <a href="/appeal/service/">Service messages</a>
         </li>
         <li>
           GOV.UK guidance (needs review)
