Final comments update to Check answers

--- a/app/views/appeal/final-comments/index.html
+++ b/app/views/appeal/final-comments/index.html
@@ -39,6 +39,9 @@
       <li>
         added question for adding comments
       </li>
+      <li>
+        updated check answers to show the answer to ‘Do you want to add final comments?’
+      </li>
     </ul>
 
     {{ govukButton({
