Appeal type changes and the LPA email for Final comments

--- a/app/views/appeal/before-you-start/index.html
+++ b/app/views/appeal/before-you-start/index.html
@@ -38,6 +38,9 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          appeal type question is now checkboxes to allow for multiple appeals
+        </li>
+        <li>
           added routes for listed building appeals
         </li>
       </ul>
