--- a/app/views/appeal/final-comments/v4/lpa-email.html
+++ b/app/views/appeal/final-comments/v4/lpa-email.html
@@ -6,7 +6,7 @@
 <!-- faux email header -->
 <section>
     <p>
-    <strong>Subject:</strong> Respond to these interested party comments
+    <strong>Subject:</strong> Respond to comments on your appeal - 0123456
   </p>
   <p>
     <strong>To:</strong> {{ data['email'] or 'my.emailaddress@hotmail.com'}}<br>
@@ -28,11 +28,11 @@
     <p>Dear (your name),</p>
 
     <p>
-      Interested parties have commented on the appeal about planning application 0123456. 
+      (local planning authority) and other interested parties have commented on your appeal.
     </p>
 
     <p>
-      We’ve attached the comments for your information.
+      We've attached the comments for your information.
     </p>
 
     <h2 class="govuk-heading-m">
@@ -40,15 +40,15 @@
     </h2>
 
     <p>
-      You can respond to any issues raise by the interested parties by submitting final comments.
+      You can respond in writing. This is called your ‘final comment’.
     </p>
 
     <p>
-      You do not need to repeat information from your statement of case. You cannot introduce new evidence or arguments. 
+      You must only respond to the issues in the comment. You do not need to repeat information from your appeal statement. You cannot introduce new evidence or arguments.
     </p>
 
     <p>
-      Add your final comments, change or update your appeal statement.
+      If you want to respond and add a comment to your appeal, go to the link:
     </p>
 
     <p>
@@ -56,11 +56,11 @@
     </p>
 
     <p>
-      Your deadline is {{ 21 | daysInFuture }}. This is the last time you can comment on the appeal or add updated documents.
+      Your deadline is {{ 21 | daysInFuture }}. This is the last time you can comment on the appeal or add new documents.
     </p>
 
     <p>
-      Final comments are optional.
+      Submitting a comment is optional. If you do not want to submit a comment, you do not need to do anything.
     </p>
 
     <h2 class="govuk-heading-m">
@@ -68,15 +68,23 @@
     </h2>
 
     <p>
-      If you submit final comments, we'll forward them to the appellant. 
+      If you submit a comment, we’ll forward it to (local planning authority).
     </p>
 
     <p>
-      If the appellant submits final comments, we’ll forward you a copy for your information.
+      (local planning authority) can also respond to interested parties’ comments. If it does, we’ll forward you a copy for your information.
     </p>
 
     <p>
-      The Inspector will then consider the appeal and make a decision.
+      Once the deadline for submitting a final comment has passed, the inspector may arrange a site visit. We’ll contact you if you need to give them access.
+    </p>
+
+    <h2 class="govuk-heading-m">
+      What do you think of this service?
+    </h2>
+
+    <p>
+      Tell us in this feedback form (takes 2 minutes), <a href="https://forms.office.com/r/tV33FukH8n" class="govuk-link">https://forms.office.com/r/tV33FukH8n</a>
     </p>
 
     <p>
