--- a/app/views/appeal/before-you-start/v14/appeal-type.html
+++ b/app/views/appeal/before-you-start/v14/appeal-type.html
@@ -4,43 +4,97 @@
 {% set title = 'What do you want to appeal?' %}
 
 {% block questions %}
-  {{ govukRadios({
-    idPrefix: 'appeal-type',
-    name: 'appeal-type',
-    classes: '',
-    fieldset: {
-      legend: {
-        html: title,
-        classes: 'govuk-fieldset__legend--l',
-        isPageHeading: true
-      }
-    },
-    items: [
-      {
-        html: 'A planning application',
-        value: 'planning application',
-        checked: checked('appeal-type','planning application')
+
+  {% if data['checkboxes'] %}
+    {{ govukCheckboxes({
+      idPrefix: 'appeal-type',
+      name: 'appeal-type',
+      classes: '',
+      fieldset: {
+        legend: {
+          text: title,
+          isPageHeading: true,
+          classes: "govuk-fieldset__legend--l"
+        }
       },
-      {
-        html: 'An enforcement notice',
-        value: 'enforcement notice',
-        checked: checked('appeal-type','enforcement notice')
+      items: [
+        {
+          html: 'A planning application',
+          value: 'planning application',
+          checked: checked('appeal-type','planning application')
+        },
+        {
+          html: 'An enforcement notice',
+          value: 'enforcement notice',
+          checked: checked('appeal-type','enforcement notice')
+        },
+        {
+          html: 'A listed building consent (LBC)',
+          value: 'listed building consent',
+          checked: checked('appeal-type','listed building consent')
+        },
+        {
+          html: 'A lawful development certificate (LDC)',
+          value: 'lawful development certificate',
+          checked: checked('appeal-type','lawful development certificate')
+        },
+        {
+          html: 'An advertisement application',
+          value: 'advertisement application',
+          checked: checked('appeal-type','advertisement application')
+        },
+        {
+          html: 'A lawful development certificate (LDC)',
+          value: 'lawful development certificate',
+          checked: checked('appeal-type','lawful development certificate')
+        },
+        {
+          html: 'A discontinuance notice (DN)',
+          value: 'discontinueance notice',
+          checked: checked('appeal-type','discontinueance notice')
+        }
+
+      ]
+    }) }}
+  {% else %}
+    {{ govukRadios({
+      idPrefix: 'appeal-type',
+      name: 'appeal-type',
+      classes: '',
+      fieldset: {
+        legend: {
+          html: title,
+          classes: 'govuk-fieldset__legend--l',
+          isPageHeading: true
+        }
       },
-      {
-        html: 'A lawful development certificate (LDC)',
-        value: 'lawful development certificate',
-        checked: checked('appeal-type','lawful development certificate')
-      },
-      {
-        html: 'An advertisement application',
-        value: 'advertisement application',
-        checked: checked('appeal-type','advertisement application')
-      },
-      {
-        html: 'A discontinuance notice (DN)',
-        value: 'discontinueance notice',
-        checked: checked('appeal-type','discontinueance notice')
-      }
-    ]
-  }) }}
+      items: [
+        {
+          html: 'A planning application',
+          value: 'planning application',
+          checked: checked('appeal-type','planning application')
+        },
+        {
+          html: 'An enforcement notice',
+          value: 'enforcement notice',
+          checked: checked('appeal-type','enforcement notice')
+        },
+        {
+          html: 'A lawful development certificate (LDC)',
+          value: 'lawful development certificate',
+          checked: checked('appeal-type','lawful development certificate')
+        },
+        {
+          html: 'An advertisement application',
+          value: 'advertisement application',
+          checked: checked('appeal-type','advertisement application')
+        },
+        {
+          html: 'A discontinuance notice (DN)',
+          value: 'discontinueance notice',
+          checked: checked('appeal-type','discontinueance notice')
+        }
+      ]
+    }) }}
+  {% endif %}
 {% endblock %}
