Claiming costs content update

--- a/app/views/appeal/full/v3/upload-documents/appeal-statement.html
+++ b/app/views/appeal/full/v3/upload-documents/appeal-statement.html
@@ -8,19 +8,19 @@
   </h1>
 
   <p class="govuk-body">
-    Your appeal statement explains why you disagree with the local planning authority&rsquo;s decision.
+    Your appeal statement explains why you disagree with the local planning authority’s decision.
   </p>
 
   <p class="govuk-body">
     If you refer to any documents in your appeal statement, for example photographs, you can upload them in the next step.
   </p>
 
-  <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+  <!-- <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
     Claiming costs
-  </h2>
+  </h2> -->
 
   <p class="govuk-body">
-    You may be able to claim costs associated with this appeal. Costs should be added as part of your statement and uploaded below.
+    If you would like to claim costs associated with this appeal plese visit gov.uk for guidance and information.
   </p>
 
   {% set costsHTML %}
