Claiming costs content update 2

--- a/app/views/appeal/full/v3/upload-documents/appeal-statement.html
+++ b/app/views/appeal/full/v3/upload-documents/appeal-statement.html
@@ -20,7 +20,7 @@
   </h2> -->
 
   <p class="govuk-body">
-    If you would like to claim costs associated with this appeal plese visit gov.uk for guidance and information.
+    If you would like to claim costs associated with this appeal plese visit GOV.UK for guidance and information.
   </p>
 
   {% set costsHTML %}
